--- a/src/app/bmx/components/project-reports/project-reports.component.scss
+++ b/src/app/bmx/components/project-reports/project-reports.component.scss
@@ -265,11 +265,11 @@ textarea::placeholder {
   color: #9fa8da;
 }
 
-textarea:focus {
-  min-height: 1rem;
-  cursor: text;
-  box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
-}
+// textarea:focus {
+//   min-height: 1rem;
+//   cursor: text;
+//   box-shadow: inset 5px 7px 7px #d1d9e9, inset -19px -31px 1px #ffffff;
+// }
 
 textarea:placeholder-shown {
   background: none;
