--- a/src/app/bmx/components/project-information/project-information.component.html
+++ b/src/app/bmx/components/project-information/project-information.component.html
@@ -166,7 +166,7 @@
           <mat-icon class="full-icon" style="color: white;">highlight_alt</mat-icon>
         </button>
         <button mat-raised-button color="success" style="background-color:#063074;color: white;"
-          (click)="saveProjectInfo()">Save </button>
+          (click)="saveProjectInfo()">Next </button>
       </div>
     </div>
   </form>
