--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -210,7 +210,7 @@
 <br>
           <mat-checkbox [(ngModel)]="randomizeTestNames">Randomize Names</mat-checkbox>
           <div class="row-boxSM">
-           <div> <div style="font-size: 16px;color: #48535e;">MAX NUMBER of selections to vote on</div>
+           <div> <div style="font-size: 16px;color: #48535e;">MAX number  of selections to vote on</div>
 
            <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; " >
                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
@@ -219,7 +219,7 @@
                    style="width:120px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
            </div></div>
           <div>
-            <div style="font-size: 16px;color: #48535e;">MIN NUMBER of selections to vote on</div>
+            <div style="font-size: 16px;color: #48535e;">MIN number  of selections to vote on</div>
 
           <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
               <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MAX:
@@ -495,7 +495,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
                     style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
             </div>
-            <div style="font-size: 13px;color: #48535e;">Min Number of selections to vote on</div>
+            <div style="font-size: 13px;color: #48535e;">Min number of selections to vote on</div>
         </div>
         <div>
             <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
@@ -504,7 +504,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
                     style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
             </div>
-            <div style="font-size: 13px;color: #48535e;">Max Number of selections to vote on</div>
+            <div style="font-size: 13px;color: #48535e;">Max number of selections to vote on</div>
         </div>
     </div>
 
