--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -259,7 +259,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                             [(ngModel)]="bmxItem.componentSettings[0].maxRule" style="width:53px; padding: 0px 10px;"
                             [value]="bmxItem.componentSettings[0].maxRule">
                     </div>
-                    <div style="font-size: 13px;color: #48535e;">Max Number of selections to vote on</div>
+                    <div style="font-size: 13px;color: #48535e;">Max number of selections to vote on</div>
                 </div>
             </div>
 
