--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -242,7 +242,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
                     style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
             </div>
-            <div style="font-size: 13px;color: #48535e;">Min Number of selections to vote on</div>
+            <div style="font-size: 13px;color: #48535e;">Min number of selections to vote on</div>
         </div>
         <div>
             <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
@@ -251,7 +251,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
                     style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
             </div>
-            <div style="font-size: 13px;color: #48535e;">Max Number of selections to vote on</div>
+            <div style="font-size: 13px;color: #48535e;">Max number of selections to vote on</div>
         </div>
     </div>
 
