--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -242,7 +242,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 <div>
                     <div
                         style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
-                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
+                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Minimum:
                             {{bmxItem.componentSettings[0].minRule}}</div>
                         <input type="number" min="0" [max]="rowsCount"
                             [(ngModel)]="bmxItem.componentSettings[0].minRule" style="width:53px; padding: 0px 10px;"
@@ -253,7 +253,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                 <div>
                     <div
                         style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
-                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MAX:
+                        <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximun:
                             {{bmxItem.componentSettings[0].maxRule}}</div>
                         <input type="number" min="0" [max]="rowsCount"
                             [(ngModel)]="bmxItem.componentSettings[0].maxRule" style="width:53px; padding: 0px 10px;"
