--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -213,7 +213,7 @@
            <div> <div style="font-size: 16px;color: #48535e;">MAX number  of selections to vote on</div>
 
            <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; " >
-               <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
+               <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Minimum:
                    {{bmxItem.componentSettings[0].minRule}}</div>
                <input type="range" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
                    style="width:120px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
@@ -222,7 +222,7 @@
             <div style="font-size: 16px;color: #48535e;">MIN number  of selections to vote on</div>
 
           <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
-              <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MAX:
+              <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximun:
                   {{bmxItem.componentSettings[0].maxRule}}</div>
               <input type="range" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
                   style="width:120px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
@@ -490,7 +490,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
       <div class="sm-row-box-rkScale">
         <div>
             <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
-                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
+                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Minimum:
                     {{bmxItem.componentSettings[0].minRule}}</div>
                 <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
                     style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
@@ -499,7 +499,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
         </div>
         <div>
             <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
-                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MAX:
+                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximun:
                     {{bmxItem.componentSettings[0].maxRule}}</div>
                 <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
                     style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
