Separate templates from projects

--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.html
@@ -201,7 +201,7 @@
                           class="no-print project-name-global"
                           mat-raised-button
                           style="position: relative; z-index: 9999999999; outline: none;">
-                    PROJECT: {{ globalDisplayName ? globalDisplayName : globalProjectName }}
+                    {{title}}: {{ globalDisplayName ? globalDisplayName : globalProjectName }}
                   </button>
                 </div>
 
