--- a/src/app/bmx/components/templates/templates.component.html
+++ b/src/app/bmx/components/templates/templates.component.html
@@ -51,7 +51,7 @@ top: 5%;"
             <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
             <td mat-cell *matCellDef="let element">
                 <button mat-icon-button style="color: #48bcb4;"
-                    aria-label="Example icon button with a home icon"  (click)=" selectedTemplateName = element.templateName; templateName = element.templateName; templateSelected(element.templateName, element.displayName) ; selectedTemplateName= element.displayName? element.displayName : element.templateName">
+                    aria-label="Example icon button with a home icon"  (click)=" selectedTemplateName = element.templateName; templateName = element.templateName; templateSelected(element.templateName, element.displayName, element.brandMatrix) ; selectedTemplateName= element.displayName? element.displayName : element.templateName">
                     <mat-icon>build</mat-icon>
                 </button>
             </td>
