--- a/src/app/bmx/components/templates/templates.component.html
+++ b/src/app/bmx/components/templates/templates.component.html
@@ -23,7 +23,7 @@ width: 140px;
 position: relative;
 top: 2%;
 left: 85%;
-  " (click)="saveNewName(); showNewTemplateModal = true">Añadir template
+  " (click)="saveNewName(); showNewTemplateModal = true">Add template
 </button>
 
 
