--- a/src/app/bmx/components/templates/templates.component.html
+++ b/src/app/bmx/components/templates/templates.component.html
@@ -23,7 +23,7 @@ width: 140px;
 position: relative;
 top: 2%;
 left: 85%;
-  " (click)="saveNewName(); showNewTemplateModal = true">Añadir template
+  " (click)=" showNewTemplateModal = true">Add template
 </button>
 
 
@@ -122,7 +122,7 @@ top: 5%;">
             <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
             <td mat-cell *matCellDef="let element">
                 <button mat-icon-button
-                    (click)=" selectedDisplayName = element.displayName;openModal(); selectedTemplateName = element.templateName; templateName = element.templateName"
+                    (click)=" selectedDisplayName = element.displayName;openModal(); selectedTemplateName = element.templateName; templateName = element.templateName; bmxPages = element.brandMatrix"
                     aria-label="Example icon button with a home icon">
                     <mat-icon>edit</mat-icon>
                 </button>
