--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -308,7 +308,7 @@
                             right: 4px;" matBadgeColor="warn" [matBadgeHidden]="!(nameCandidates.length > 0)"
                             [matBadge]="nameCandidates.length" matBadgeSize="medium"></span>
                         </div>
-                        <button class="screen-button" mat-raised-button *ngIf="isScreenButton&&isNSR"
+                        <button class="screen-button" mat-raised-button *ngIf="isScreenButton"
                           (click)="screenNames()">
                           <!-- <mat-icon>folder_special</mat-icon> -->
                           screen
