--- a/src/app/bmx/components/templates/templates.component.html
+++ b/src/app/bmx/components/templates/templates.component.html
@@ -42,7 +42,7 @@ left: 85%;
         <div style="display: flex; align-items: center; gap:unset 15px;  justify-content: space-between;">
             Create a new template from an existing one <button mat-raised-button color="success" style=" background-color: #063074;
             color: white;
-            width: 200px;" (click)="existingTemplate = true">Create from template</button>
+            width: 200px;" (click)="existingTemplate = true">Clone template</button>
         </div>
     </div>
 
