--- a/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/survey-creation-design.component.scss
@@ -218,8 +218,8 @@
 
 
 ::ng-deep .mat-button-wrapper{
-    font-size: 1vw;
+    font-size: 1rem;
     @media (max-width: 712px){
-      font-size: 2.5vw;
+      font-size: 2.5rem;
     }
  }
