--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/narrow-down/narrow-down.component.html
@@ -237,21 +237,21 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
       <div class="sm-row-box-rkScale">
         <div>
             <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
-                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
+                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Minimum:
                     {{bmxItem.componentSettings[0].minRule}}</div>
                 <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
                     style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
             </div>
-            <div style="font-size: 13px;color: #48535e;">Min Number Of Questions To Answer</div>
+            <div style="font-size: 13px;color: #48535e;">Min number of selections to vote on</div>
         </div>
         <div>
             <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
-                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MAX:
+                <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">Maximun:
                     {{bmxItem.componentSettings[0].maxRule}}</div>
                 <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
                     style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
             </div>
-            <div style="font-size: 13px;color: #48535e;">Max Number Of Questions To Answer</div>
+            <div style="font-size: 13px;color: #48535e;">Max number of selections to vote on</div>
         </div>
     </div>
 
@@ -476,7 +476,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                             <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                             <div style="display: flex;">
                                 <button
-                                    (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
+                                    (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y);  "
                                     *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;
                            color: white;
                            min-width: 20px;
@@ -490,7 +490,7 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
 
                             <div style="display: flex;gap: 60px;flex-direction: column;">
                                 <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
-                                    <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x)"
+                                    <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x);maxRuleCounterMinus()"
                                         *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;
                             color: white;
                             min-width: 20px;
