--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/rank-scale/rank-scale.component.html
@@ -241,21 +241,21 @@
           <div class="sm-row-box-rkScale">
             <div>
                 <div style="display: flex;flex-direction: column;justify-content: center;gap: 10px;align-items: center; ">
-                    <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MIN:
+                    <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;"> Minimum:
                         {{bmxItem.componentSettings[0].minRule}}</div>
                     <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].minRule"
                         style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].minRule">
                 </div>
-                <div style="font-size: 13px;color: #48535e;">Min Number Of Questions To Answer</div>
+                <div style="font-size: 13px;color: #48535e;">Min number of selections to vote on</div>
             </div>
             <div>
                 <div style="display: flex;flex-direction: column;justify-content:center;gap: 10px;align-items: center;">
-                    <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;">MAX:
+                    <div style="font-size: 16px;margin-top: 10px;color: #48535e;text-align: center;"> Maximun:
                         {{bmxItem.componentSettings[0].maxRule}}</div>
                     <input type="number" min="0" [max]="rowsCount" [(ngModel)]="bmxItem.componentSettings[0].maxRule"
                         style="width:53px; padding: 0px 10px;" [value]="bmxItem.componentSettings[0].maxRule">
                 </div>
-                <div style="font-size: 13px;color: #48535e;">Max Number Of Questions To Answer</div>
+                <div style="font-size: 13px;color: #48535e;">Max number of selections to vote on</div>
             </div>
         </div>
       </div>
