--- a/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
+++ b/src/app/bmx/components/bmx-creator/survey-creation-design/templates/image-rate-scale/image-rate-scale.component.html
@@ -286,7 +286,7 @@
               <mat-form-field appearance="outline" style="margin: 0px; width: 100%;">
                 <mat-label>Choose Criteria</mat-label>
                 <mat-select multiple [(ngModel)]="selectedCriteria"
-                    (selectionChange)="criteriaSelection(selectedCriteria)">
+                    (selectionChange)="criteriaSelection(newselectedCriteria)">
                   <mat-option *ngFor="let criteriaItem of CRITERIA; let c = index" [value]="criteriaItem">
                     {{criteriaItem.name}}
                     <mat-icon matTooltip="Double click to delete criteria" matTooltipPosition="right"
@@ -540,8 +540,8 @@ justify-content: center;cursor: move; height: 25px; width: 100%;"><svg width="24
                     <div style="display: flex; flex-direction: column; width: 40%;">
                         <mat-form-field appearance="outline" style="margin: 0px; width: 100%;">
                             <mat-label>Choose Criteria</mat-label>
-                            <mat-select multiple [(ngModel)]="selectedCriteria"
-                                (selectionChange)="criteriaSelection(selectedCriteria)">
+                            <mat-select multiple [(ngModel)]="newselectedCriteria"
+                                (selectionChange)="criteriaSelection(newselectedCriteria)">
                                 <mat-option *ngFor="let criteriaItem of CRITERIA; let c = index" [value]="criteriaItem">
                                     {{criteriaItem.name}}
                                     <mat-icon matTooltip="Double click to delete criteria" matTooltipPosition="right"
