--- a/src/app/bmx/components/templates/templates.component.html
+++ b/src/app/bmx/components/templates/templates.component.html
@@ -105,10 +105,10 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Template name</th>
             <td mat-cell *matCellDef="let element"> {{element.displayName}} </td>
         </ng-container>
-        <ng-container matColumnDef="TemplateName">
+        <!-- <ng-container matColumnDef="TemplateName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Template name </th>
-            <td mat-cell *matCellDef="let element"> {{element.templateName}} </td>
-        </ng-container>
+            <td mat-cell *matCellDef="let element"> {{element.displayName}} </td>
+        </ng-container> -->
         <ng-container matColumnDef="Created">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Created </th>
             <td mat-cell *matCellDef="let element"> {{element.created | date:'dd MMMM yyyy, HH:mm:ss'}} </td>
