--- a/src/app/bmx/components/templates/templates.component.html
+++ b/src/app/bmx/components/templates/templates.component.html
@@ -12,18 +12,10 @@
         </mat-form-field>
 
     </div>
-    <button mat-raised-button color="success" style=" background-color: #063074;
-  color: white;
-  width: 40%;;" (click)="saveNewName()">Save </button>
+    <button mat-raised-button color="success" style=" background-color: #063074; color: white; width: 40%;;" (click)="saveNewName()">Save </button>
 </div>
 
-<button mat-raised-button color="success" style=" background-color: #063074;
-color: white;
-width: 140px;
-position: relative;
-top: 2%;
-left: 85%;
-  " (click)=" showNewTemplateModal = true">Add template
+<button mat-raised-button color="success" style=" background-color: #063074;color: white;width: 140px;position: relative;top: 2%;left: 85%;" (click)=" showNewTemplateModal = true">Add template
 </button>
 
 
@@ -100,29 +92,31 @@ left: 85%;
 </div>
 
 
-<div style="    position: relative;
-top: 5%;">
+<div style="position: relative;top: 5%;">
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" style="width: 100%;">
         <!-- Position Column -->
+        <ng-container matColumnDef="index">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
+            <td mat-cell *matCellDef="let element">{{ element.index }}</td>
+        </ng-container>
         <ng-container matColumnDef="displayName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Display name</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Template name</th>
             <td mat-cell *matCellDef="let element"> {{element.displayName}} </td>
         </ng-container>
         <ng-container matColumnDef="TemplateName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Template name </th>
             <td mat-cell *matCellDef="let element"> {{element.templateName}} </td>
         </ng-container>
-
         <ng-container matColumnDef="Created">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Created </th>
-            <td mat-cell *matCellDef="let element"> {{element.Created}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.created | date:'dd MMMM yyyy, hh:mm:ss a'}} </td>
         </ng-container>
 
         <ng-container matColumnDef="Name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
             <td mat-cell *matCellDef="let element">
                 <button mat-icon-button
-                    (click)=" selectedDisplayName = element.displayName;openModal(); selectedTemplateName = element.templateName; templateName = element.templateName; bmxPages = element.brandMatrix"
+                    (click)="selectedDisplayName = element.displayName;openModal(); selectedTemplateName = element.templateName; templateName = element.templateName; bmxPages = element.brandMatrix"
                     aria-label="Example icon button with a home icon">
                     <mat-icon>edit</mat-icon>
                 </button>
@@ -141,7 +135,7 @@ top: 5%;">
         <ng-container matColumnDef="Delete">
             <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 3.33%;"> </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-icon-button style="color: #bc488a;" aria-label="Example icon button with a home icon">
+                <button (click)="deleteTemplate(element.templateName)" mat-icon-button style="color: #bc488a;" aria-label="Example icon button with a home icon">
                     <mat-icon>delete</mat-icon>
                 </button>
             </td>
